feat: support guest reactions
